...
        case services = 1
        case activities = 2
        case account = 3

        var title: String {
            switch self {
            case .home: return "Home"
            case .services: return "Services"
            case .activities: return "Activities"
            case .account: return "Account"
            }
        }

...
