...
    NavigationStack {
        List {
            Text("Sample Content")
            Text("Sample Content")
            Text("Sample Content")
        }
        .navigationTitle("Settings")
        .toolbar {
            ToolbarItem(placement: .principal) {
                LogoView(style: .horizontal, height: 32)
            }
        }
    }
...
